Add sidebar container with fixed positioning and update HTML structure

--- a/posts.css
+++ b/posts.css
@@ -70,3 +70,8 @@ margin-top: 10px;
 margin-bottom: 10px;
 }
 
+#sidebar-cont {
+  position: fixed;
+  height: -webkit-fill-available;
+  width: fit-content;
+}
