--- a/products.css
+++ b/products.css
@@ -41,3 +41,8 @@
     height: 100px;
     width: 100px;
 }
+#sidebar-cont {
+    position: fixed;
+    height: -webkit-fill-available;
+    width: fit-content;
+  }
