--- a/sidebar.css
+++ b/sidebar.css
@@ -5,26 +5,32 @@
 
 
 #div1{
-    width: 50px;
-    height: 20px;
-    background-color: red;
-    border: 1px solid black;
+    width: 110px;
+    height: 30px;
+   
     margin: 10px;
+    padding: 5px;
+    text-align: left;
+    border-radius: 20px;
 }
 
 #div2{
-    width: 85px;
-    height: 20px;
-    background-color:yellow;
-    border: 1px solid black;
+    width: 110px;
+    height: 30px;
     margin: 10px;
+    padding: 5px;
+    text-align: left;  
+      border-radius: 20px;
+
 }
 #div3{
-    width: 50px;
-    height: 20px;
-    background-color:blue;
-    border: 1px solid black;
+    width: 110px;
+    height: 30px;
     margin: 10px;
+    padding: 5px;
+    text-align: left;
+    border-radius: 20px;
+
 }
 
 #maindiv{
