--- a/sidebar.css
+++ b/sidebar.css
@@ -39,5 +39,5 @@
     top: 0px;
      width: 200px;
      height: 100vh;
-     background-color: aqua;
+     background-color: rgb(57, 197, 197);
 }
