--- a/users.css
+++ b/users.css
@@ -47,3 +47,36 @@
     height: -webkit-fill-available;
     width: fit-content;
   }
+
+
+
+
+  
+  .load{
+    height: 100px;
+    width: 100px;
+    border: 10px solid rgb(243, 243, 243);
+    border-top: 10px solid rgb(86, 186, 249);
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(50px, -50px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation-name: loadingAnimation;
+    animation-duration: 2s;
+    animation-delay: .5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes loadingAnimation {
+    from{
+        transform: translate(50px, -50px) rotate(0deg);
+    }
+    to{
+        transform: translate(50px, -50px) rotate(360deg);
+    }
+}
