--- a/posts.css
+++ b/posts.css
@@ -57,7 +57,8 @@
   justify-content: space-between;
   margin-left: 10px;
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 14px; 
+  margin-right: 10px;
 }
 .likesdiv {
   width: 100px;
@@ -68,6 +69,7 @@
   width: 100px;
   background-color: red;
   border-radius: 20px;
+  
 }
 .namediv {
   width: 280px;
