--- a/sidebar.css
+++ b/sidebar.css
@@ -12,6 +12,7 @@
     padding: 5px;
     text-align: left;
     border-radius: 20px;
+    
 }
 
 #div2{
@@ -39,5 +40,5 @@
     top: 0px;
      width: 200px;
      height: 100vh;
-     background-color: aqua;
+     background:linear-gradient(to right, #4568dc, #b06ab3); ;
 }
