--- a/mode.css
+++ b/mode.css
@@ -1,19 +1,20 @@
 button{
     background-color: orangered;
-    width: 110px;
+    width: 50px;
     height: 30px;
-    margin: 10px;
+    margin: 0px;
     padding: 5px;
     border-radius: 20px;
     cursor: pointer;
-  
+    
+}
+
+#maindiv:hover button{
+  margin-left: 28px;
 }
 button:hover{
-
     box-shadow: 2px 3px 3px;
     transform: scale(1.03);
-   
-  
   
   }
   .dark-mode {
