--- a/posts.css
+++ b/posts.css
@@ -4,19 +4,19 @@
 }
 
 #container {
-  width: 90%;
+  width: 10;
   min-height: 100vh;
   padding: 0%;
   margin: 0%;
   background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-  transform: translate(175px);
+  /* transform: translate(175px); */
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
 }
 .userDiv {
-  width: 280px;
+  
   background-color: grey;
   padding: 10px;
   margin: 10px;
