--- a/mode.css
+++ b/mode.css
@@ -17,11 +17,13 @@ button:hover{
     transform: scale(1.03);
   
   }
-  .dark-mode {
+  .darkmode {
     background: linear-gradient(to right, #200122, #6f0000);
   }
 
  #exportButton{
   margin-left: 1140px;
+  width: 50px;
+  height: 30px;
 }
   
