--- a/posts.css
+++ b/posts.css
@@ -4,12 +4,11 @@
 }
 
 #container {
-  /* width: 100%; */
   min-height: 100vh;
   padding: 0%;
   margin: 0%;
   background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-  /* transform: translate(75px); */
+  padding-left: 100px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -124,7 +123,7 @@
   height: 30px;
   width: 100px;
   background-color: #c5c5c5;
-  margin-left: 800px;
+  margin-left: 80%;
   margin-bottom: 10px;
   font-weight: bold;
   color: blue;
