--- a/products.css
+++ b/products.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    padding-left: 100px;
+    padding-left: 120px;
     width: 100%;
     background: #b39999;
   background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
@@ -19,11 +19,11 @@
 .pdct{
     margin: 10px;
     padding: 5px;
-    width: 96%;
+    width: 94%;
     min-height: 326px;
     background-color: rgb(176, 178, 179);
     border-radius: 20px;
-    box-shadow: 5px 3px 10px;
+    box-shadow: 3px 4px 8px  rgb(50, 50, 50);
     text-align: center;
     cursor: pointer;    
 
@@ -34,7 +34,7 @@
 }
 .pdct:hover{
     opacity: 85%;
-    box-shadow: 2px 3px 3px;
+    box-shadow: 2px 3px 3px 3px rgb(218, 218, 218);
     transform: scale(1.03);
 
 }
