--- a/mode.css
+++ b/mode.css
@@ -1,11 +1,12 @@
-button{
+#exportButton{
     background-color: orangered;
-    width: 50px;
+    width: 100px;
     height: 30px;
     margin: 0px;
     padding: 5px;
     border-radius: 20px;
     cursor: pointer;
+    margin-left: 1140px;
     
 }
 
@@ -17,13 +18,6 @@ button:hover{
     transform: scale(1.03);
   
   }
-  .darkmode {
+  .dark-mode {
     background: linear-gradient(to right, #200122, #6f0000);
   }
-
- #exportButton{
-  margin-left: 1140px;
-  width: 50px;
-  height: 30px;
-}
-  
