--- a/sidebar.css
+++ b/sidebar.css
@@ -79,3 +79,13 @@
     position: absolute;
     content: "";
 }
+#mode{
+    background-color: orangered;
+    height: 30px;
+    width: 50px;
+    border-radius: 20px;
+    padding: 5px;
+    margin-right: 5px;
+    margin-top: 10px;
+    cursor: pointer;
+}   
