--- a/mode.css
+++ b/mode.css
@@ -6,7 +6,8 @@
     padding: 5px;
     border-radius: 20px;
     cursor: pointer;
-    margin-left: 1140px;
+    margin-left: 1400px;
+    margin-top: 10px;
     
 }
 
