--- a/products.css
+++ b/products.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  padding-left: 100px;
+  padding-left: 150px;
   width: 100%;
   background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
 
@@ -15,7 +15,7 @@
 
 }
 .main_pdct {
-  margin: 10px;
+  margin: 10;
   padding: 5px;
   width: 96%;   
   height: 360px;
