--- a/users.css
+++ b/users.css
@@ -80,3 +80,13 @@
         transform: translate(50px, -50px) rotate(360deg);
     }
 }
+
+.searchUser{
+    display: flex;
+}
+
+.searchInput{
+    border-radius: 10px;
+    width: 400px;
+    height: 30px;
+}
