--- a/mode.css
+++ b/mode.css
@@ -6,7 +6,7 @@
     padding: 5px;
     border-radius: 20px;
     cursor: pointer;
-    margin-left: 1150px;
+    margin-left: 90%;
     margin-top: 10px;
     
 }
