--- a/mode.css
+++ b/mode.css
@@ -6,7 +6,7 @@
     padding: 5px;
     border-radius: 20px;
     cursor: pointer;
-    margin-left: 1150px;
+    margin-left:90%;
     margin-top: 10px;
     
 }
@@ -20,3 +20,43 @@ button:hover{
   .dark-mode {
     background: linear-gradient(to right, #200122, #6f0000);
   }
+
+  #modal{
+  background-color: #f64f59;
+  width: 400px;
+  min-height: 200px;
+  margin-left: 40%;
+  border-radius: 10px;
+  z-index: 2;
+  position: absolute;
+}
+#overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index:1;
+ 
+}
+.hide{
+  display: none;
+}
+
+#closeBtn{
+background-color: #4d4b4b;
+height: 20px;
+width: 20px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+color: white;
+margin-left: 95%;
+overflow: hidden;
+}
