--- a/users.css
+++ b/users.css
@@ -83,10 +83,29 @@
 
 .searchUser{
     display: flex;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin-top: 2px;
 }
 
 .searchInput{
-    border-radius: 10px;
     width: 400px;
     height: 30px;
+    border: none;
+    outline: none;
+    margin-left: 10px;
+    padding-left: 5px;
+    border-radius: 10px;
+    
+
+}
+
+
+.searchIcon{
+    height: 20px;
+    width: 20px;
+    margin-left: 5px;
 }
