--- a/users.css
+++ b/users.css
@@ -83,7 +83,7 @@
 
 .searchUser{
     display: flex;
-    background-color: #fff;
+    background-color: #e9e9e9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,12 +92,13 @@
 }
 
 .searchInput{
-    width: 400px;
+    width: 300px;
     height: 30px;
     border: none;
     outline: none;
     margin-left: 10px;
     padding-left: 5px;
+    background-color: #e9e9e9;
     border-radius: 10px;
     
 
