slide active & search user

--- a/mode.css
+++ b/mode.css
@@ -18,5 +18,5 @@ button:hover{
   
   }
   .dark-mode {
-    background: linear-gradient(to right, #200122, #6f0000);
+    background: linear-gradient(to right, #6c0073, #981818);
   }
