--- a/posts.css
+++ b/posts.css
@@ -3,17 +3,20 @@
   padding: 0%;
   margin: 0%;
 }
+body{
+  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+}
 #maincont{
   width: 100%;
   min-height: 100vh;
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  /* background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); */
 
 }
 #container {
   width: 100%;
   height: 100%;
   padding-left: 150px;
-  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  /* background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); */
   display: grid;
   /* grid-template-columns: 33% 33% 33%; */
   grid-template-columns: 25% 25% 25% 25%;
