--- a/sidebar.css
+++ b/sidebar.css
@@ -44,6 +44,7 @@
     position: absolute;
     top: 9px;
     left: 40%; 
+    
 }
 
 #maindiv:hover .tooltip {
@@ -57,8 +58,9 @@
     height: 30px;
     width: 50px;
     border-radius: 20px;
-    padding: 5px;
+    padding:auto;
     margin-right: 5px;
     margin-top: 10px;
     cursor: pointer;
+    color: white;
 }   
