--- a/users.css
+++ b/users.css
@@ -3,14 +3,16 @@
     margin: 0%;
     padding: 0%;
 }
+body{
+     background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59); 
 
+}
 #container{
     padding-left: 200px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
 }
 
 
