--- a/users.css
+++ b/users.css
@@ -1,112 +1,129 @@
 * {
-    box-sizing: border-box;
-    margin: 0%;
-    padding: 0%;
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
 }
 
-#container{
-    padding-left: 190px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+#container {
+  padding-left: 190px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
 }
-
 
 .userdata {
-    margin: 10px;
-    padding: 5px;
-    width: 30%;
-    height: 350px;
-    background-color: rgb(104, 104, 104);
-    border-radius: 20px;
-    box-shadow: 5px 3px 10px white;
-    word-wrap: break-word;  
-    text-align: center;
-    cursor: pointer;    
-}
-.userdata:hover{
-    opacity: 85%;
-    box-shadow: 2px 3px 3px;
-    transform: scale(1.03);
-
-}
-#hr{
-    border: 2px solid;
+  margin: 10px;
+  padding: 5px;
+  width: 30%;
+  height: 350px;
+  background-color: rgb(104, 104, 104);
+  border-radius: 20px;
+  box-shadow: 5px 3px 10px white;
+  word-wrap: break-word;
+  text-align: center;
+  cursor: pointer;
 }
 
-#image{
-    /* margin-left: -125px; */
-    height: 150px;
-    width: 150px;
+.userdata:hover {
+  opacity: 85%;
+  box-shadow: 2px 3px 3px;
+  transform: scale(1.03);
+}
+
+#hr {
+  border: 2px solid;
+}
+
+#image {
+  height: 150px;
+  width: 150px;
 }
 
 #sidebar-cont {
-    position: fixed;
-    height: -webkit-fill-available;
-    width: fit-content;
-  }
+  position: fixed;
+  height: -webkit-fill-available;
+  width: fit-content;
+}
 
-
-
-
-  
-  .load{
-    height: 100px;
-    width: 100px;
-    border: 10px solid rgb(243, 243, 243);
-    border-top: 10px solid rgb(86, 186, 249);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(50px, -50px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation-name: loadingAnimation;
-    animation-duration: 2s;
-    animation-delay: .5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+.load {
+  height: 100px;
+  width: 100px;
+  border: 10px solid rgb(243, 243, 243);
+  border-top: 10px solid rgb(86, 186, 249);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50px, -50px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: loadingAnimation;
+  animation-duration: 2s;
+  animation-delay: .5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 @keyframes loadingAnimation {
-    from{
-        transform: translate(50px, -50px) rotate(0deg);
-    }
-    to{
-        transform: translate(50px, -50px) rotate(360deg);
-    }
+  from {
+    transform: translate(50px, -50px) rotate(0deg);
+  }
+  to {
+    transform: translate(50px, -50px) rotate(360deg);
+  }
 }
 
-.searchUser{
-    display: flex;
-    background-color: #e9e9e9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    margin-top: 2px;
+.searchUser {
+  display: flex;
+  background-color: #e9e9e9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin-top: 2px;
 }
 
-.searchInput{
-    width: 300px;
-    height: 30px;
-    border: none;
-    outline: none;
-    margin-left: 10px;
-    padding-left: 5px;
-    background-color: #e9e9e9;
-    border-radius: 10px;
-    
+.searchInput {
+  width: 300px;
+  height: 30px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  padding-left: 5px;
+  background-color: #e9e9e9;
+  border-radius: 10px;
+}
 
+.searchIcon {
+  height: 20px;
+  width: 20px;
+  margin-left: 5px;
 }
 
 
-.searchIcon{
-    height: 20px;
-    width: 20px;
-    margin-left: 5px;
+
+
+.sorting-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%;
 }
+
+
+.sorting-buttons button {
+  padding: 10px 20px;
+  background-color: #4CAF50; 
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+  
