--- a/settings.css
+++ b/settings.css
@@ -22,34 +22,40 @@ span {
   color: red;
 }
 
-.setoptionDiv {
+#setoptionDiv {
   height: 600px;
   width: 500px;
   padding: 10px;
   border-radius: 10px;
   margin-top: 10px;
   margin-left: 10%;
-  background: linear-gradient(to right, #e0eafc, #cfdef3);
+  background-color:white ;
 }
 
-.themeDiv {
-  margin-bottom: 20px;
-  font-size: 20px;
-  color: black;
-}
+
 .sidebarsetDiv {
   margin-bottom: 30px;
   font-size: 20px;
-  color: black;
+
 }
 #sidebar_type {
   width: 200px;
   margin-top: 5px;
   height: 20px;
 }
-#theme {
-  width: 200px;
-  height: 20px;
+.themeDiv{
+    font-size: 20px;
+    margin-bottom: 20px;
+    
+    
+}
+#changethemebtn{
+    width: 100px;
+    height: 20px;
+    background-color: orangered;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: o.0s ease;
 }
 #back {
   background-color: rgba(161, 51, 239, 0.729);
