--- a/sidebar.css
+++ b/sidebar.css
@@ -50,7 +50,7 @@
     opacity: 0; 
     pointer-events: none;
     position: absolute;
-    color: rgb(115, 199, 143);
+    color: black;
     top: 9px;
     left: 40%; 
     
@@ -84,3 +84,4 @@
 .active {
     background-color: #732e09;
 }
+ 
