--- a/mode.css
+++ b/mode.css
@@ -30,7 +30,7 @@ button:hover{
   }
 
   #modal{
-  background-color: #f64f59;
+  background: linear-gradient(to right, #c31432, #240b36);
   width: 400px;
   min-height: 200px;
   margin-left: 40%;
