--- a/posts.css
+++ b/posts.css
@@ -148,3 +148,16 @@ body{
   color: blue;
   border-radius: 10px;
 }
+
+#commentbox{
+  padding: 10px;
+  color: rgb(184, 224, 255);
+}
+#commentbox b {
+  color: rgb(0, 255, 8);
+}
+
+
+.fa-user{
+  color: #12c2e9;
+}
