--- a/mode.css
+++ b/mode.css
@@ -25,7 +25,7 @@ button:hover{
     color: white;
   }
   .inner_dark_mode{
-    background: linear-gradient(to right, #403a3e, #be5869);
+    background: linear-gradient(to right, #00416a, #e4e5e6);
     color: white;
   }
 
