--- a/posts.css
+++ b/posts.css
@@ -40,7 +40,6 @@ body{
   padding: 10px;
   min-height: 326px;
   border-radius: 20px;
-  box-shadow: 5px 3px 10px;
   text-align: center;
   cursor: pointer;
   display: flex;
@@ -51,6 +50,7 @@ body{
 .userDiv:hover {
   box-shadow: 2px 3px 3px;
   transform: scale(1.03);
+  transition: 1.3 ease;
 }
 
 .titlediv {
