--- a/sidebar.css
+++ b/sidebar.css
@@ -55,6 +55,18 @@
     left: 40%; 
     
 }
+.dark_tooltip {
+    font-size: 15px;
+    padding: 10px 0px;
+    border-radius: 25px;
+    opacity: 0; 
+    pointer-events: none;
+    position: absolute;
+    color: white;
+    top: 9px;
+    left: 40%; 
+    
+}
 
 #maindiv:hover .tooltip {
     opacity: 1; 
@@ -82,6 +94,9 @@
 
 
 .active {
-    background-color: #732e09;
+    background-color:#695CFE;
 }
- 
+ .fa{
+    color: black;
+ }
+
