--- a/posts.css
+++ b/posts.css
@@ -56,16 +56,20 @@ body{
 .titlediv {
   /* width: 280px; */
   font-size: 25px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-left: 10px;
 }
 .bodydiv {
   /* width: 280px; */
   font-size: 14px;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-left: 10px;
   margin-bottom: 20px;
   word-wrap: break-word;
+}
+
+.name_div{
+  font-size: 20px;
 }
 .reaction {
   /* width: 280px; */
@@ -160,4 +164,40 @@ body{
 
 .fa-user{
   color: #12c2e9;
+}
+
+.searchIcon{
+  height: 20px;
+  width: 20px;
+  margin-left: 5px;
+  color: black;
+}
+.searchInput{
+  width: 300px;
+  height: 30px;
+  border: none;
+  outline: none;
+  margin-left: 10px;
+  padding-left: 5px;
+  background-color: #e9e9e9;
+  border-radius: 10px;
+  
+
+}
+
+.searchUser{
+  display: flex;
+  background-color: #e9e9e9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  margin-top: 2px;
+  width: 300px;
+  margin-left: 45%;
+  margin-bottom: 20px;
+}
+
+::-webkit-scrollbar{
+  display: none ;
 }
