--- a/products.css
+++ b/products.css
@@ -41,13 +41,12 @@ body {
 }
 
 .main_pdct {
-  padding: 5px;
   width: 96%;
-  height: 265px;
+  height: 260px;
   position: relative;
 
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .main_pdct:hover {
   transform: scale(1.03);
@@ -71,13 +70,15 @@ body {
   display: block;
   opacity: 0;
   transition: 0.2s ease;
-  padding: 10px;
-  margin-bottom: 54px;
+  width: 96%;
+  height: 50%;
   background: rgba(0, 0, 0, 0.5);
   color: white;
   border-radius: 0px 0px 10px 10px;
   margin-top: 50%;
-  width: 100%;
+  margin-left: 5px;
+padding-left: 10PX;
+
 }
 
 .hiddenDiv {
@@ -86,7 +87,6 @@ body {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
-  /* background-color: rgb(111, 120, 124); */
   background-color: #8e1ec6;
   position: absolute;
   top: 50%;
@@ -98,7 +98,9 @@ body {
   align-items: center;
   padding: 10px;
   width: 100%;
+
   cursor: pointer;
+  
 }
 #prdctimg {
   width: 100%;
