--- a/users.css
+++ b/users.css
@@ -14,42 +14,11 @@ body{
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-
-.userdata {
-  margin: 10px;
-  padding: 5px;
-  width: 30%;
-  height: 350px;
-  background-color: rgb(104, 104, 104);
-  border-radius: 20px;
-  box-shadow: 5px 3px 10px white;
-  word-wrap: break-word;
-  text-align: center;
-  cursor: pointer;
-}
-
-.userdata:hover {
-  opacity: 85%;
-  box-shadow: 2px 3px 3px;
-  transform: scale(1.03);
-}
-
-#hr {
-  border: 2px solid;
-}
-
-#image {
-  height: 150px;
-  width: 150px;
-}
-
 #sidebar-cont {
   position: fixed;
   height: -webkit-fill-available;
   width: fit-content;
 }
-
-
 
 
   
@@ -97,7 +66,6 @@ body{
   height: 30px;
   border: none;
   outline: none;
-  font-size: 18px;
   margin-left: 10px;
   padding-left: 5px;
   background-color: #e9e9e9;
@@ -133,11 +101,14 @@ body{
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
+  
 
 
 
-input[type="number"]::-webkit-inner-spin-button, 
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+#mainTable{
+width: 100%;
+}
+#table{
+  border-collapse: collapse;
+  border: 2px solid black;
 }
