--- a/products.css
+++ b/products.css
@@ -189,3 +189,19 @@ body {
   margin-left: 65%;
   margin-top: 10px;
 }
+
+#delete_btn{
+  color: red;
+  font-size: larger;
+  position: absolute;
+  margin: 10px 0px 0px -25px;
+  visibility: hidden;
+}
+
+.main_pdct:hover #delete_btn{
+  visibility: visible;
+}
+
+#delete_btn:hover{
+  scale: 2;
+}
