--- a/users.css
+++ b/users.css
@@ -128,9 +128,10 @@ margin-top: 5px;
   width: 60px;
   margin-right: 10px;
 }
-.checkbox{
-  height: 30px;
-  width: 100%;
+.accordion-content{
+  display: flex;
+  background-color: #fff;
+  justify-content: space-evenly ;
 }
 
 
@@ -158,4 +159,9 @@ margin-top: 5px;
   width: 100px;
   border-radius: 10px;
   padding: 5px;
+}
+.row-checkbox{
+  width:100%;
+  height: 40px;
+  cursor: pointer;
 }
