--- a/sidebar.css
+++ b/sidebar.css
@@ -29,6 +29,7 @@
     transition: width 0.3s ease;
     height: 100vh;
     background-color: rgb(10, 255, 255);
+
 }
 
 
@@ -75,11 +76,14 @@
     width: 100%;
     background-color: red;
     position: absolute;
+    border-radius: 20px;
 }
 
 
 .active {
     background-color:#695CFE;
+    border-radius: 10px;
+  
 }
  .fa{
     color: black;
