--- a/settings.css
+++ b/settings.css
@@ -86,6 +86,8 @@ span {
 
 .far {
   font-size: 30px;
+  border-radius: 50%;
+
 }
 #userprofile {
   font-size: 40px;
@@ -93,6 +95,7 @@ span {
   background: none;
   border: none;
   padding-top: 20px;
+
 }
 .profile_icon {
   display: flex;
@@ -104,8 +107,13 @@ span {
   width: 300px;
   background-color: #fff;
   margin-left: 120px;
-  border-radius: 20px;
   margin-top: 10px;
+ overflow: scroll;
+ padding-top: 10px;
+ padding-left: 5px;
+}
+#profile::-webkit-scrollbar{
+  display: none;
 }
 .upperCont{
   display: flex;
@@ -114,3 +122,10 @@ span {
   display: none;
 }
 
+.proInfo{
+
+ padding: 5px;
+ justify-content:center;
+ align-items: center;
+
+}
