--- a/settings.css
+++ b/settings.css
@@ -144,6 +144,13 @@ color: black;
   margin-left: 30%;
   margin-bottom: 20px;
 }
+
+#pro_imge_id{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+
 .exinfo{
 margin-left: 10px;
 font-size: 18px;
