--- a/settings.css
+++ b/settings.css
@@ -1,26 +1,26 @@
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  body {
-    background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
-    overflow: hidden;
-  }
+body {
+  background: linear-gradient(to right, #12c2e9, #c471ed, #f64f59);
+  overflow: hidden;
+}
 
-  .setcont {
-    width: 100%;
-    height: 100vh;
-    margin-left: 150px;
-  }
-  h1 {
-    padding: 10px;
-    font-size: 40px;
-  }
-  span {
-    color: red;
-  }
+.setcont {
+  width: 100%;
+  height: 100vh;
+  margin-left: 150px;
+}
+h1 {
+  padding: 10px;
+  font-size: 40px;
+}
+span {
+  color: red;
+}
 
 #setoptionDiv {
   height: 600px;
@@ -32,95 +32,88 @@
   background-color: rgba(224, 255, 253, 0.61);
   backdrop-filter: blur(10px);
 }
-  #setoptionDiv {
-    height: 600px;
-    width: 700px;
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-left: 10%;
-    background-color: white;
-  }
 
-  .sidebarsetDiv {
-    margin-bottom: 30px;
-    font-size: 20px;
-  }
-  #sidebar_type {
-    width: 200px;
-    margin-top: 5px;
-    height: 20px;
-    border-radius: 20px;
-  }
-  .themeDiv {
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-  #changethemebtn {
-    width: 100px;
-    height: 20px;
-    background-color: orangered;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: o.0s ease;
-  }
-  #back {
-    background-color: rgba(161, 51, 239, 0.729);
-    width: 100px;
-    height: 30px;
-    margin: 0px;
-    padding: 5px;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-  #sidebar-cont {
-    position: fixed;
-    height: -webkit-fill-available;
-  }
+.sidebarsetDiv {
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+#sidebar_type {
+  width: 200px;
+  margin-top: 5px;
+  height: 20px;
+  border-radius: 20px;
+}
+.themeDiv {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+#changethemebtn {
+  width: 100px;
+  height: 20px;
+  background-color: orangered;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: o.0s ease;
+}
+#back {
+  background-color: rgba(161, 51, 239, 0.729);
+  width: 100px;
+  height: 30px;
+  margin: 0px;
+  padding: 5px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+#sidebar-cont {
+  position: fixed;
+  height: -webkit-fill-available;
+}
 
-  .logout {
-    font-size: 40px;
+.logout {
+  font-size: 40px;
 
-    padding-top: 20px;
-  }
-  .fa {
-    color: white;
-    cursor: pointer;
-    background: none;
-    border: none;
-    font-size: 30px;
-  }
-  .heading {
-    display: flex;
-  }
+  padding-top: 20px;
+}
+.fa {
+  color: white;
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 30px;
+}
+.heading {
+  display: flex;
+}
 
-  .far {
-    font-size: 30px;
-    border-radius: 50%;
+.far {
+  font-size: 30px;
+  border-radius: 50%;
 
-  }
-  #userprofile {
-    font-size: 40px;
-    margin-right: 40px;
-    background: none;
-    border: none;
-    padding-top: 20px;
+}
+#userprofile {
+  font-size: 40px;
+  margin-right: 40px;
+  background: none;
+  border: none;
+  padding-top: 20px;
 
-  }
-  .profile_icon {
-    display: flex;
-    margin-left: 70%;
-  }
+}
+.profile_icon {
+  display: flex;
+  margin-left: 70%;
+}
 
 #profile{
   height: 400px;
   width: 300px;
-  background-color: #fff;
+  background-color: rgba(223, 238, 237, 0.61);
   margin-left: 120px;
   margin-top: 10px;
  overflow: scroll;
  padding-top: 10px;
  padding-left: 5px;
+ border-radius: 10px;
+ backdrop-filter: blur(10px);
 }
 #profile::-webkit-scrollbar{
   display: none;
@@ -132,10 +125,26 @@
   display: none;
 }
 
-  .proInfo{
+.proInfo{
 
  padding: 5px;
  justify-content:center;
  align-items: center;
-
+color: black;
+}
+.pro_imge{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: solid;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30%;
+  margin-bottom: 20px;
+}
+.exinfo{
+margin-left: 10px;
+font-size: 18px;
 }
