--- a/mode.css
+++ b/mode.css
@@ -1,4 +1,4 @@
-#exportButton{
+/* #exportButton{
     background-color: orangered;
     width: 100px;
     height: 30px;
@@ -9,7 +9,7 @@
     margin-left: 90%;
     margin-top: 10px;
     
-}
+} */
 
 
 button:hover{
@@ -29,7 +29,7 @@ button:hover{
     color: white;
   }
 
-  #modal{
+  /* #modal{
   background: linear-gradient(to right, #c31432, #240b36);
   width: 400px;
   min-height: 200px;
@@ -67,4 +67,4 @@ text-align: center;
 color: white;
 margin-left: 95%;
 overflow: hidden;
-}
+} */
