--- a/users.css
+++ b/users.css
@@ -23,7 +23,7 @@ html {
   width: fit-content;
 }
 
-  .load{
+  /* .load{
     height: 100px;
     width: 100px;
     border: 10px solid transparent;
@@ -41,7 +41,7 @@ html {
     animation-delay: .5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-}
+} */
 
 @keyframes loadingAnimation {
   from {
@@ -52,7 +52,7 @@ html {
   }
 }
 
-.searchUser {
+/* .searchUser {
   display: flex;
   background-color: #e9e9e9;
   display: flex;
@@ -77,7 +77,7 @@ html {
   height: 20px;
   width: 20px;
   margin-left: 5px;
-}
+} */
 
 .sorting-buttons {
   display: flex;
@@ -135,7 +135,7 @@ margin-top: 5px;
 }
 
 
-.top-button {
+/* .top-button {
   width: 60px;
   height: 60px;
   background-color: blue;
@@ -154,7 +154,7 @@ margin-top: 5px;
 
 .top-button:hover {
   background-color: darkblue;
-}
+} */
 #users_num_select{
   width: 100px;
   border-radius: 10px;
