common.css page added

--- a/settings.css
+++ b/settings.css
@@ -110,7 +110,7 @@ span {
   margin-left: 120px;
   margin-top: 10px;
  overflow: scroll;
- padding-top: 10px;
+ padding-top: 20px;
  padding-left: 5px;
  border-radius: 10px;
  backdrop-filter: blur(10px);
@@ -131,6 +131,7 @@ span {
  justify-content:center;
  align-items: center;
 color: black;
+margin-top: 0;
 }
 .pro_imge{
   height: 100px;
