--- a/common.css
+++ b/common.css
@@ -89,7 +89,7 @@
 .top-button:hover {
     background-color: darkblue;
   }
-.searchUser {
+  .searchUser{
     display: flex;
     background-color: #e9e9e9;
     display: flex;
@@ -97,7 +97,9 @@
     align-items: center;
     border-radius: 10px;
     margin-top: 2px;
-  }
+    width: 300px;
+    margin-left: 50%;
+    margin-bottom: 20px;}
   
 .searchInput {
     width: 300px;
