--- a/products.css
+++ b/products.css
@@ -9,6 +9,7 @@ body {
   grid-template-columns: 68% 32%;
   margin: 0;
   padding: 0;
+  height: 100vh;
 }
 .container {
   display: grid;
@@ -134,25 +135,7 @@ padding-left: 10PX;
   height: -webkit-fill-available;
 }
 
-/* .load {
-  height: 100px;
-  width: 100px;
-  border: 10px solid transparent;
-  border-top: 10px solid rgb(86, 186, 249);
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(50px, -50px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation-name: loadingAnimation;
-  animation-duration: 2s;
-  animation-delay: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-} */
+
 
 @keyframes loadingAnimation {
   from {
@@ -214,26 +197,12 @@ padding-left: 10PX;
   scale: 2;
 }
 
-/* .top-button {
-  width: 60px;
-  height: 60px;
-  background-color: blue;
-  color: white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  position: fixed;
-  bottom: 16px;
-  left: 60%;
-  z-index: 1;
-  cursor: pointer;
-}
 
-.top-button:hover {
-  background-color: darkblue;
-} */
+.top-button {
+  left:60%;
+z-index: 1;}
+  
+ 
 
 /* #activedelete{
   position: absolute;
