--- a/users.css
+++ b/users.css
@@ -23,25 +23,7 @@ html {
   width: fit-content;
 }
 
-  /* .load{
-    height: 100px;
-    width: 100px;
-    border: 10px solid transparent;
-    border-top: 10px solid rgb(86, 186, 249);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(50px, -50px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation-name: loadingAnimation;
-    animation-duration: 2s;
-    animation-delay: .5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-} */
+  
 
 @keyframes loadingAnimation {
   from {
@@ -51,33 +33,10 @@ html {
     transform: translate(50px, -50px) rotate(360deg);
   }
 }
-
-/* .searchUser {
-  display: flex;
-  background-color: #e9e9e9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  margin-top: 2px;
+#searchUser{
+  margin-left: 20%;
 }
 
-.searchInput {
-  width: 300px;
-  height: 30px;
-  border: none;
-  outline: none;
-  margin-left: 10px;
-  padding-left: 5px;
-  background-color: #e9e9e9;
-  border-radius: 10px;
-}
-
-.searchIcon {
-  height: 20px;
-  width: 20px;
-  margin-left: 5px;
-} */
 
 .sorting-buttons {
   display: flex;
@@ -135,28 +94,10 @@ margin-top: 5px;
 }
 
 
-/* .top-button {
-  width: 60px;
-  height: 60px;
-  background-color: blue;
-  color: white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  cursor: pointer;
-  user-select: none;
-}
 
-.top-button:hover {
-  background-color: darkblue;
-} */
 #users_num_select{
   width: 100px;
+  height:30px;
   border-radius: 10px;
   padding: 5px;
 }
